@@ -1,3 +1,9 @@
+2008-06-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* GUtils.xs
+	* t/1.t: Provide Glib::strerror and Glib::strsignal.  Patch by
+	Kevin Ryde.
+
 2008-05-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* GSignal.xs: In the xsub for g_signal_add_emission_hook, make
